Fix double scrollbar

--- a/app/assets/stylesheets/landing-page.css
+++ b/app/assets/stylesheets/landing-page.css
@@ -18,7 +18,7 @@ h6 {
     font-weight: 700;
 }
 body {
-    margin-top:5.5rem;
+    padding-top: 5.5rem;
 }
 
 .topnav {
